[gd_scene load_steps=8 format=3 uid="uid://dpahprj74vwg7"]

[ext_resource type="Script" path="res://slime.gd" id="1_b6qfw"]
[ext_resource type="Texture2D" uid="uid://cyjm2x1o3lbw5" path="res://Assets/Enemies/slime-Sheet.png" id="2_c2yqq"]

[sub_resource type="Animation" id="Animation_qsap3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_h3w4m"]
resource_name = "move"
length = 3.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 3]
}

[sub_resource type="Animation" id="Animation_1fat2"]
resource_name = "moveLeft"
length = 2.0
step = 0.25

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pinw5"]
_data = {
"RESET": SubResource("Animation_qsap3"),
"move": SubResource("Animation_h3w4m"),
"moveLeft": SubResource("Animation_1fat2")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vsa3d"]
radius = 5.0
height = 20.0

[node name="Slime" type="CharacterBody2D" node_paths=PackedStringArray("sprite", "move_timer", "animation_player", "damage_timer") groups=["Slimes"]]
texture_filter = 1
motion_mode = 1
script = ExtResource("1_b6qfw")
sprite = NodePath("Sprite2D")
move_timer = NodePath("MoveTimer")
animation_player = NodePath("Sprite2D/AnimationPlayer")
damage_timer = NodePath("DamageTimer")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.74, 0.74)
texture = ExtResource("2_c2yqq")
hframes = 8
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_pinw5")
}
speed_scale = 2.0

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_vsa3d")

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="MoveTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
